--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/style-resources": "^0.1.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "node-sass": "^4.12.0",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.10.2",
     "sass-loader": "^7.1.0",
     "timeago.js": "^4.0.1"
   },
