--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-sass": "^4.12.0",
     "nuxt": "^2.10.2",
     "sass-loader": "^7.1.0",
-    "timeago.js": "^4.0.1"
+    "timeago.js": "^4.0.1",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {}
 }
